--- a/Documents/exo_airbnb/base.css
+++ b/Documents/exo_airbnb/base.css
@@ -34,7 +34,6 @@
 body{
   font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 14px;
-    /*line-height: 1.43;*/
     color: #484848;
     background-color: #f5f5f5;
 }
@@ -50,16 +49,14 @@ img{
   border: 0;
   margin: 0;
   background-repeat: no-repeat;
-  /*position: absolute;
-  z-index: 1;*/
+
 }
 
 header{
   margin-top: 0;
-  /*z-index: 2;*/
   width: 100%;
   height: auto;
-  background-image: url(airbnb.png);
+  background-image: url(fond_airbnb.jpg);
 }
 
 .icon-airbnb:before {
@@ -72,7 +69,6 @@ header{
 nav{
   height: 50px;
   line-height: 50px;
-  /*margin: 10px 0;*/
 }
 nav ul li a{
     color: #fff;
@@ -144,6 +140,10 @@ h4{
   margin-bottom: 24px;
 }
 
+.noborder{
+  border: none;
+}
+
 .play{
   opacity: 0.5;
   width: 8%;
@@ -163,7 +163,6 @@ line-height: 1.43;
 }
 
 .searchbar{
-  background-color: #fff;
   width: 974px;
   height: 48px;
   font-size: 14px;
@@ -188,12 +187,11 @@ select{
 .bouton {
     font-weight: normal;
     white-space: pre;
-
-    background-color: inherit;
+    background-color: #fff;
     font-family: inherit;
     font-size: 14px;
     width: 141px;
-    height: 42px;
+    height: 47px;
 }
 
 #search{
